k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-app
  template:
    metadata:
      labels:
        app: grpc-app
    spec:
      containers:
      - name: grpc-app
        image: kaium123/grpc-svc:1
        ports:
        - containerPort: 50051
        env:
        - name: CONSUL_PATH
          value: "grpc-svc"
        - name: CONSUL_URL
          value: "consul:8500"
      restartPolicy: Always
