k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-app-service
spec:
  selector:
    app: grpc-app
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: LoadBalancer
