k8s/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: LoadBalancer
