k8s/consul-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  selector:
    app: consul
  ports:
    - name: http
      protocol: TCP
      port: 8500
      targetPort: 8500
    - name: dns
      protocol: UDP
      port: 8600
      targetPort: 8600
  type: NodePort
