k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: kaium123/sm-db
          ports:
            - containerPort: 5432
          env:
            - name: POSTGRES_PASSWORD
              value: "12345678"
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_USER
              value: postgres
