k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc

spec:
  selector: 
    component: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
