k8s/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.19.1
        ports:
        - containerPort: 10000
        volumeMounts:
          - name: config-volume
            mountPath: /etc/envoy/envoy-config.yaml
      volumes:
        - name: config-volume
          configMap:
            name: envoy-config
