k8s/envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
  type: LoadBalancer
