k8s/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: {address: 0.0.0.0, port_value: 8081}

static_resources:
  listeners:
  - name: mainapp_sidecar_listener
    address:
      socket_address: {address: 0.0.0.0, port_value: 5199}
        
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_json
          codec_type: AUTO
          access_log:
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/etc/envoy/protos/book.pb"
              services: ["book.Book"]
              match_incoming_request_route: false
              ignore_unknown_query_parameters: true
              auto_mapping: false
              convert_grpc_status: true
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
          route_config:
            name: mainapp_sidecar_http_route_config
            virtual_hosts:
            - name: mainapp_sidecar_virtual_host
              domains: 
              - "*"
              routes:
              - name:
                match:
                  prefix: "/"
                route:
                  cluster: mainapp_service

  clusters:
  - name: mainapp_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.25s
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: { }
    load_assignment:
      cluster_name: mainapp_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # reroute to service container in the same K8s deployment
                address: 192.168.49.2
                port_value: 31139
