k8s/kong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
  labels:
    app: kong
spec:
  selector:
    app: kong
  ports:
  - name: kong-port
    protocol: TCP
    port: 80
    targetPort: 8000
  - name: kong-admin-port
    protocol: TCP
    port: 443
    targetPort: 8443
  type: LoadBalancer
